2004-06-16  Carl Hetherington  <inkscape@carlh.net>

	* src/sp-item.h: added a comment.

2004-06-15  Ted Gould  <ted@gould.cx>

	* share/extensions/ai_input.inkmod:
	Removing the command line arguement to specify line endings.

	* src/print.cpp, src/print.h, src/sp-text.cpp,
	src/extension/extension.cpp, src/extension/extension.h,
	src/extension/implementation/implementation.cpp,
	src/extension/implementation/implementation.h,
	src/extension/internal/ps.cpp, src/extension/internal/ps.h:

	Changing it so that the text to vector is it's own function.  This way it
	can be used as a parameter in Postscript, but then can be easily used for
	drivers which only support vector drawing.

2004-06-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/select-toolbar.cpp: Cleanups and preparation for px units.

	* src/helper/units.h, src/helper/units.cpp:
	  Add reference version of sp_points_get_units, sp_units_get_points.
	  Implement as simple multiplication instead of sp_convert_distance.
	  (sp_units_table_sane): New function.
	* src/helper/units-test.cpp: Test sp_units_table_sane.

	* src/sp-object-repr.cpp: Move some declarations to first use.
	* src/sp-object-repr.h, src/sp-object-repr.cpp (sp_object_type_register):
	  Change return type to void.

	* src/sp-item.cpp (sp_item_repr_compare_position):
	  Reimplement as shallow wrapper around sp_repr_compare_position.

	* src/helper/units.h, src/helper/units.cpp:
	  SPUnitId: new enum, to allow replacing string lookups.
	  Get rid of handling for unused SP_UNIT_USERSPACE.
	  Remove unused SPUnit.version field.

	* src/helper/units-test.cpp (test_bases): Test sp_unit_get_identity.

	* src/helper/Makefile_insert (helper_units_test_LDADD): Fix the previous
	  commit: -lglib-2.0 instead of -lglib.

2004-06-15  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/Makefile.am:
	* src/helper/Makefile_insert:
	* src/helper/units-test.cpp: New unit test.

	* src/select-toolbar.cpp: Greater conformance to CodingStyle.
