@@ -1,3 +1,11 @@
+2004-06-17  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/helper/units.h, src/helper/units.cpp:
+	  (sp_unit_get_by_id): new function.
+	  (sp_convert_distance_full): Change arguments & return value.
+	  Call g_log if no conversion possible.
+	  Callers updated.
+
 2004-06-16  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/sp-item.h: added a comment.
@@ -46,9 +54,9 @@
 
 2004-06-15  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
-	* src/Makefile.am:
-	* src/helper/Makefile_insert:
-	* src/helper/units-test.cpp: New unit test.
+	* src/Makefile.am, src/helper/Makefile_insert,
+	  src/helper/units-test.cpp:
+	  New unit test file units-test.cpp.
 
 	* src/select-toolbar.cpp: Greater conformance to CodingStyle.
 
